--- a/second_css/user-home.css
+++ b/second_css/user-home.css
@@ -324,17 +324,35 @@ z-index:10;
 }
 .write-note input[type="submit"]{
   width:  6rem;
+  font-size: 1.1rem;
   margin-right:1rem ;
   height: 3rem;
-  background-color: rgb(240, 240, 166);
-  color: rgb(255, 0, 0);
+  background-color: rgb(255, 166, 0);
+  color: white;
+  border: 3px solid rgb(255, 166, 0);
+  transition: .3s;
 }
 .write-note input[type="RESET"]{
-  width: 6rem;
+  width:  6rem;
+  font-size: 1.1rem;
+  margin-right:1rem ;
   height: 3rem;
-  background-color: white;
-  color: red;
-  border: 1px solid red;
+  background-color: rgb(255, 255, 255);
+  color: #ee2727;
+  border: 3px solid #ee2727;
+  transition: .3s;
+}
+.write-note input[type="submit"]:hover{
+  background-color: rgb(255, 255, 255);
+  color: rgb(255, 166, 0);
+  border: 3px solid rgb(255, 166, 0);
+  transform: translateY(-5px);
+}
+.write-note input[type="RESET"]:hover{
+  background-color: #ee2727;
+  color: #ffffff;
+  border: 3px solid #ee2727;
+  transform: translateY(-5px);
 }
 .add-note-interface{
   display: flex !important;
@@ -353,7 +371,7 @@ z-index:10;
   left: 0;
   width: 100%;
   height: 100%;
-  background: #000000;
+  background: transparent;
   z-index:10;
   transition: .5s;
   }
@@ -376,6 +394,7 @@ z-index:10;
     margin-top: 2rem;
     overflow-x:hidden;
     transition: .5s;
+    transition: 0.5s cubic-bezier(0.62, 0.21, 0.54, 0.97);
   }
   .delete-note form{
     display: flex;
@@ -437,8 +456,8 @@ z-index:10;
   letter-spacing: 4px;
   text-align: center;
   font-weight: 700;
-  border-bottom: 3px solid #686854;
-  color: #252127;
+  border-bottom: 3px solid #ffae00;
+  color: #ffae00;
   font-size: 2rem;
   padding: 1rem;
 
@@ -452,8 +471,75 @@ z-index:10;
 }
 .user_info{
   WIDTH: 45%;
-  padding: 1rem;
+  padding: 0.5rem;
+  border-radius: 0.5rem;
+  border-bottom: 3px solid #ffae00 ;
+  margin: 1rem;
+  font-weight:500;
+  text-align: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;  font-weight: 700;
 }
 .label{
-  width: 45%;
+  width: 37%;
+  margin: 1rem;
+  text-align: center;
+  padding: 0.5rem;
+  background-color: white;
+  font-weight: 700;
+  border-radius: 0.5rem;
+  box-shadow: rgb(50 50 93 / 25%) 0px 2px 5px -1px, rgb(0 0 0 / 30%) 0px 1px 3px -1px;
+}
+.settings
+/* for the pop message */
+.pop_up{
+  width: 22rem;
+height: 5rem;
+position: fixed;
+top: 7rem;
+right: -50rem;
+display: flex;
+BACKGROUND-COLOR: #51a351;
+flex-direction: column;
+PADDING: 1REM 2REM;
+border-radius: 1rem;
+opacity: 0.5;
+z-index: 1000;   
+transition: .5s;
+box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;       
+   }
+.pop_up:hover{
+  opacity: 1;
+}
+.x{
+  width: 100%;
+  text-align: right;
+}
+.message{
+  font-size: 1rem;
+  font-weight: 500;
+  color:rgb(255, 255, 255) ;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+ 
+}
+.x button{
+  border:none ;
+  background-color: transparent;
+  cursor: pointer;
+  transition: .3s;
+}
+.x button:hover{
+  opacity: 0.3;
+}
+.message p {
+  margin: 0;
+  width: 85%;
+}
+.message img{
+  width: 2rem;
+}
+.get_out{
+  right: 2rem !important;
 }
