--- a/master_css/style.css
+++ b/master_css/style.css
@@ -167,7 +167,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content: space-around;
     padding: 1rem;
     border-radius: 2rem;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
@@ -179,6 +179,10 @@
 }
 .card .image{
     max-width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 .card .image img{
     max-width: 100%;
@@ -191,9 +195,7 @@
 }
 .placeholder{
     width: 80%;
-    height: 10rem;
     border-radius: 2rem;
-    background-color: #a86b00;
 }
 .aboutUs{
     max-width: 95%;
