--- a/second_css/user-home.css
+++ b/second_css/user-home.css
@@ -254,10 +254,57 @@ body {
     fill: rgb(255, 255, 255);
     opacity: .7;
 }
+.settings form{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.wrapp{
+  display: flex;
+  align-items: center;
+    width: 100%;
+  justify-content: center;
+}
+.settings form input[type='submit']{
+  margin-top: 2rem;
+  margin-bottom: 3rem;
+  width: 6rem;
+  height: 2.5rem;
+  font-size: 1.2rem;
+  border: 3px solid #ffae00;
+  margin-right: 3rem;
+  BACKGROUND-COLOR: #FFAE00;
+  border-radius: 0.5rem;
+  color: white;
+  font-weight: 700;
+  cursor: pointer;
+  transition: .3s;
+}
+.settings form input[type='submit']:hover{
+  BACKGROUND-COLOR: white;
+  color: #FFAE00;
+  transform: translateY(-6px);
+}
+.ff{
+  display: none;
+}
+#photo{
+  visibility: hidden;
+  display: none;
+}
+.lll{
+  text-align: center;
+  cursor: pointer;
+  border-radius: 1rem;
+  color: rgb(45, 45, 212);
+  transition: .3s;
+}
+.lll:hover{
+  opacity: .5;
 
-
-
-
+}
  /* for the interface that shows above the content  */
 
 
@@ -299,26 +346,26 @@ z-index:10;
 }
 .write-note input{
   margin-top: 2rem;
-  border: 3px solid #707070; 
-  border-radius: 1.3rem;      
-  padding: 0.5rem;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  border-radius: 1rem;      
+  padding: 1rem;
+  border: none;
   font-weight: 700;
 }
 .write-note input[id="titre"]{
   width: 80%;
   height: 2.5rem;
-  border:2px solid #707070;
-
-
+  
 }
 .write-note #note{
   width: 80%;
   height: 12rem;
-  border-radius: 2rem;
-  border:2px solid #707070;
+  border-radius: 1rem;
+  border: none;
   margin-top: 2rem;
   margin-bottom: 2rem;
   overflow:scroll;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   padding: 2rem;
   resize: vertical;
 }
@@ -327,16 +374,20 @@ z-index:10;
   font-size: 1.1rem;
   margin-right:1rem ;
   height: 3rem;
+  cursor: pointer;
+  padding: 0rem;
   background-color: rgb(255, 166, 0);
   color: white;
   border: 3px solid rgb(255, 166, 0);
   transition: .3s;
 }
 .write-note input[type="RESET"]{
+  cursor: pointer;
   width:  6rem;
   font-size: 1.1rem;
   margin-right:1rem ;
   height: 3rem;
+  padding: 0rem;
   background-color: rgb(255, 255, 255);
   color: #ee2727;
   border: 3px solid #ee2727;
@@ -489,7 +540,6 @@ z-index:10;
   border-radius: 0.5rem;
   box-shadow: rgb(50 50 93 / 25%) 0px 2px 5px -1px, rgb(0 0 0 / 30%) 0px 1px 3px -1px;
 }
-.settings
 /* for the pop message */
 .pop_up{
   width: 22rem;
